Let the returned fileid be equal to the files real inode number (st_ino), instead of mixing with st_dev. Mixing with st_dev is not possible without risking overflow/collisions. Another advantage is that fileids typically will be less then 32 bits. Some NFS clients have troubles dealing with large fileids, for example 32 bit applications on 64 bit Linux kernels.

--- a/unfsd.8
+++ b/unfsd.8
@@ -335,6 +335,13 @@ created file. Malicious processes on the server could manipulate
 those attributes, breaking the semantics of the exclusive create
 operation. A process attempting to do so would need to be able
 to see the NFS network traffic.
+.PP
+unfsd always uses the "nohide" semantics, which means that clients
+will see all file systems mounted below the exported path. However,
+some NFS clients do not cope well with this situation as, for
+instance, it is then possible for two files in the one apparent
+filesystem to have the same inode number. To avoid this, make sure
+that the client mounts each exported file system. 
 .SH FILES
 .TP 20
 .I /etc/exports
