--- a/NEWS
+++ b/NEWS
@@ -9,9 +9,11 @@ ChangeLog
 Version 0.9.17
    - add support for 64 bit inode numbers
    - the returned "fileid" is now equal to the files real inode number
-   - fix ACCESS and read_executable: stop adding permissions when user or group matches
+   - fix ACCESS and read_executable: stop adding permissions when user or 
+     group matches
    - report unreadable executables as unreadable unless -r is used
-   - support for using larger read and write sizes: up to 32K for UDP and 512K for TCP.
+   - support for using larger read and write sizes: up to 32K for UDP and 
+     512K for TCP
 
 Version 0.9.16
 
