Fix one incorrect name in credits.

--- a/NEWS
+++ b/NEWS
@@ -4,7 +4,7 @@ What's new or changed in 0.9.18
 The daemon can now be instructed to write its pid (process id) to
 a file by use of the new -i command line option. The feature was
 originally written as an ALT Linux patch to unfs3 created by
-Anton Farygin and then ported to unfs3 0.9.17 by Michael Shigorin.
+Nick S. Grechukh and then ported to unfs3 0.9.17 by Michael Shigorin.
 The official implementation of the feature is based on their work.
 
 
