--- a/NEWS
+++ b/NEWS
@@ -11,6 +11,11 @@ FreeBSD systems which are fixed now.
 Bernhard Duebi reported problems with filesystem size
 reporting when using a Solaris Zone. This is fixed now.
 
+The BUGS section of the manpage has been updated to
+explicitly list the permissions that UNFS3 will need
+for exported directories and the parents of exported
+directories.
+
 
 ChangeLog
 =========
@@ -20,6 +25,7 @@ Version 0.9.22
   - fix spelling mistake in "no_all_squash" export option parsing
   - fix build on more recent FreeBSD systems
   - fix filesystem size reporting for Solaris Zones and others
+  - document permission needs for exported directories
 
 Version 0.9.21
 
